apllied devops